--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    
-    "test": "cucumber-js test || true",
-    "posttest": "npx ts-node src/helper/report.ts"
+    "pretest": "npx ts-node src/helper/init.ts",
+    "test": "cucumber-js test  || (exit 0)",
+    "posttest": "npx ts-node src/helper/report.ts",
+    "test:failed": "cucumber-js -p rerun @rerun.txt"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +16,10 @@
     "@cucumber/cucumber": "^11.1.1",
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.2",
+    "multiple-cucumber-html-reporter": "^3.8.0",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "multiple-cucumber-html-reporter": "^3.8.0"
+    "fs-extra": "^11.2.0"
   }
 }
